--- a/backends/concrete-cpu/implementation/Cargo.toml
+++ b/backends/concrete-cpu/implementation/Cargo.toml
@@ -26,6 +26,7 @@ num-complex = { version = "0.4", default-features = false, features = [
   "bytemuck",
 ] }
 bincode = "1.3.3"
+serde = "~1"
 
 rayon = { version = "1.6", optional = true }
 once_cell = { version = "1.16", optional = true }
