fix(frontend): revert unintentional commenting of silent activation in benchmark target

--- a/frontends/concrete-python/Makefile
+++ b/frontends/concrete-python/Makefile
@@ -118,7 +118,8 @@ pytest-gpu: tfhers-utils
 		-m "${PYTEST_MARKERS}"
 
 benchmark:
-	eval $(shell #make silent_cp_activate)
+	eval $(shell make silent_cp_activate)
+
 	export PROGRESS_SAMPLES=3
 	export PROGRESS_OUTPUT_INDENT=2
 
