--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -299,6 +299,7 @@ jobs:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
     runs-on: ${{ github.event.inputs.runner_name }}
     steps:
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Setup Python
         uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
         with:
@@ -313,11 +314,6 @@ jobs:
         with:
           submodules: recursive
           path: repo
-      # Install rust for tfhers-utils
-      - name: Install rust
-        uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # v1.0.7
-        with:
-          toolchain: stable
       - name: Test wheel
         run: |
           WHEEL_DIR=$(pwd)/${{ format('wheel-{0}-linux-x86', matrix.python-version) }}
