--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           mode: start
           github-token: ${{ secrets.CONCRETE_ACTIONS_TOKEN }}
-          slab-url: ${{ secrets.SLAB_URL }}
+          slab-url: ${{ secrets.SLAB_BASE_URL }}
           job-secret: ${{ secrets.JOB_SECRET }}
           backend: aws
           profile: cpu-test
@@ -98,7 +98,7 @@ jobs:
           mkdir $KEY_CACHE_DIRECTORY
           make pytest
   teardown-instance:
-    name: Teardown instance (core-crypto-benchmarks)
+    name: Teardown instance
     if: ${{ always() && needs.setup-instance.result != 'skipped' }}
     needs: [ start-instance, concrete-python-test-pytest ]
     runs-on: ubuntu-latest
